try fix overlap

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -36,11 +36,10 @@ html, body {
     -webkit-font-smoothing: antialiased;
 }
 
-#app { height: 100dvh; display: flex; flex-direction: column; overflow: hidden; padding-top: var(--safe-top); }
-
-#__nuxt {
-    height: 100%;
+#app, #__nuxt {
+    height: 100dvh;
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    padding-top: var(--safe-top);
 }
